[gd_scene load_steps=10 format=2]

[ext_resource path="res://img/population.png" type="Texture" id=1]
[ext_resource path="res://fnt/dejavu-medium.tres" type="DynamicFont" id=2]
[ext_resource path="res://img/mute.png" type="Texture" id=3]
[ext_resource path="res://Mute.gd" type="Script" id=4]
[ext_resource path="res://Card.gd" type="Script" id=5]
[ext_resource path="res://Card.tscn" type="PackedScene" id=6]
[ext_resource path="res://SavedCard.tscn" type="PackedScene" id=7]

[sub_resource type="ViewportTexture" id=1]

resource_local_to_scene = true
flags = 0
viewport_path = NodePath("Card/Viewport")

[sub_resource type="ViewportTexture" id=2]

resource_local_to_scene = true
flags = 0
viewport_path = NodePath("SavedCard/Viewport")

[node name="FixHUD" type="Node" index="0"]

[node name="Population" type="Node2D" parent="." index="0"]

position = Vector2( 1080, 0 )
_sections_unfolded = [ "Transform" ]

[node name="PopulationBackground" type="Polygon2D" parent="Population" index="0"]

polygon = PoolVector2Array( 0, 0, 0, 50, 200, 50, 200, 0 )
uv = PoolVector2Array(  )
color = Color( 1, 1, 1, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0

[node name="PopulationIcon" type="Sprite" parent="Population" index="1"]

position = Vector2( 30, 26 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="PopLabel" type="Label" parent="Population" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 70.0
margin_top = 10.0
margin_right = 190.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "999+"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Mute" type="TextureButton" parent="Population" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 150.0
margin_top = 5.0
margin_right = 190.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
script = ExtResource( 4 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Card" type="Node2D" parent="." index="1"]

position = Vector2( 1100, 570 )
script = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Viewport" type="Viewport" parent="Card" index="0"]

arvr = false
size = Vector2( 600, 600 )
own_world = true
world = null
transparent_bg = true
msaa = 0
hdr = false
disable_3d = false
usage = 2
debug_draw = 0
render_target_v_flip = true
render_target_clear_mode = 0
render_target_update_mode = 2
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = true
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4
_sections_unfolded = [ "Audio Listener", "GUI", "Physics", "Render Target", "Rendering", "Shadow Atlas" ]

[node name="Card" parent="Card/Viewport" index="0" instance=ExtResource( 6 )]

[node name="ViewportSprite" type="Sprite" parent="Card" index="1"]

texture = SubResource( 1 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform" ]

[node name="Button" type="TextureButton" parent="Card" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -100.0
margin_top = -150.0
margin_right = 100.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
_sections_unfolded = [ "Rect" ]

[node name="CardSound" type="AudioStreamPlayer" parent="Card" index="3"]

stream = null
volume_db = -12.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="ActionSound" type="AudioStreamPlayer" parent="Card" index="4"]

stream = null
volume_db = -12.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="SavedCard" type="Node2D" parent="." index="2"]

position = Vector2( 780, 600 )
_sections_unfolded = [ "Transform" ]

[node name="Viewport" type="Viewport" parent="SavedCard" index="0"]

arvr = false
size = Vector2( 600, 600 )
own_world = true
world = null
transparent_bg = true
msaa = 0
hdr = false
disable_3d = false
usage = 2
debug_draw = 0
render_target_v_flip = true
render_target_clear_mode = 0
render_target_update_mode = 2
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = true
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4

[node name="SavedCard" parent="SavedCard/Viewport" index="0" instance=ExtResource( 7 )]

[node name="ViewportSprite" type="Sprite" parent="SavedCard" index="1"]

position = Vector2( 100, 150 )
texture = SubResource( 2 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform" ]

[node name="Button" type="TextureButton" parent="SavedCard" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 200.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
_sections_unfolded = [ "Material", "Rect", "Textures", "Visibility" ]

[connection signal="pressed" from="Population/Mute" to="Population/Mute" method="_on_Mute_pressed"]

[connection signal="finished_removing" from="Card/Viewport/Card" to="Card" method="_on_Card_finished_removing"]

[connection signal="finished_rotating" from="Card/Viewport/Card" to="Card" method="_on_Card_finished_rotating"]

[connection signal="pressed" from="Card/Button" to="Card" method="_on_Button_pressed"]

[connection signal="pressed" from="SavedCard/Button" to="Card" method="_on_SaveButton_pressed"]


